--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maomy的Code網站</title>
-    <link rel="icon" href="icon.jpg" type="image/jpg" />
+    <link rel="icon" href="icon.png" type="image/png" />
     <meta name="description" content="快來白嫖我的免費軟體、免費程式、免費.....">
-    <meta property="og:image" content="/icon.jpg">
+    <meta property="og:image" content="/icon.png">
     <style>
         body {
             background-color: #2e2e2e;
